# currency_exchange

./: .example.env  README.md  alembic.ini  config.py  database.py  index.html  launch_local_nginx.sh  main.py  pyproject.toml  requirements.txt
api/currencies/: models.py  repository.py  router.py
auth/: auth.py  database.py  manager.py  schemas.py
currencies/: router.py
front/js/: app.js
helpers/: download_currencies.py
migrations/: env.py
migrations/versions/: 696eca5c2641_create_tables.py  93888c98680d_create_tables.py
misc/: download_currencies.py
models/: models.py
operations/: router.py
resources/: codes_currencies.csv
