[tool.poetry]
name = "currency-exchange"
version = "0.1.0"
description = "Currency Exchange API"
authors = ["Sergey Udachin <s.udachin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
bcrypt = "4.1.2"
black = "24.4.0"
certifi = "2024.2.2"
cffi = "1.16.0"
click = "8.1.7"
cryptography = "42.0.5"
dnspython = "2.6.1"
email-validator = "2.1.1"
exceptiongroup = "1.2.0"
fastapi = "0.110.1"
fastapi-users = "13.0.0"
fastapi-users-db-sqlalchemy = "6.0.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
makefun = "1.15.2"
mako = "1.3.3"
markupsafe = "2.1.5"
mypy-extensions = "1.0.0"
orjson = "3.10.1"
packaging = "24.0"
pathspec = "0.12.1"
platformdirs = "4.2.0"
psycopg2-binary = "2.9.9"
pwdlib = "0.2.0"
pycparser = "2.22"
pydantic = "2.7.0"
pydantic-extra-types = "2.6.0"
pydantic-settings = "2.2.1"
pydantic-core = "2.18.1"
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.29"
starlette = "0.37.2"
tomli = "2.0.1"
typing-extensions = "4.11.0"
ujson = "5.9.0"
uvicorn = "0.29.0"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websockets = "12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
